action barnya dimunculin lagi utk bbrp activity. activity yg gaperlu action bar di hide dari onCreate nya.

--- a/app/src/main/res/layout/daily_case.xml
+++ b/app/src/main/res/layout/daily_case.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:padding="16dp">
 
     <TextView
@@ -61,17 +62,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:contentDescription="@string/imageDesc"
-        android:layout_width="280dp"
-        android:layout_height="93dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/DataSemua"
-        app:layout_constraintVertical_bias="0.379"
-        app:srcCompat="@drawable/rectanglelogo" />
+<!--    <ImageView-->
+<!--        android:id="@+id/imageView"-->
+<!--        android:contentDescription="@string/imageDesc"-->
+<!--        android:layout_width="280dp"-->
+<!--        android:layout_height="93dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.496"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/DataSemua"-->
+<!--        app:layout_constraintVertical_bias="0.379"-->
+<!--        app:srcCompat="@drawable/rectanglelogo" />-->
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
