--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="babyblue">#308ff3</color>
+    <color name="bluegrotto">#1A83CC</color>
+    <color name="midnightblue">#00478F</color>
+
 </resources>
