UI main menu and PP done. utk map masih bingung itu bisa pake action bar ato ngga? klo bisa pake mau ditambahin back button di action barnya. kalo gabisa, di hide aja action barnya, jgn di disable dari themenya soalnya ada bbrp activity yang pake action bar.

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -39,14 +39,16 @@
                     android:layout_width="0dp"
                     android:layout_height="35dp"
                     android:layout_marginTop="10dp"
-                    android:background="@color/purple_500"
+                    android:background="@drawable/round_rect_shape"
                     android:layout_weight="1"
                     android:layout_marginRight="5dp"
                     android:onClick="search"
+                    android:textColor="@color/white"
                     android:layout_marginLeft="5dp"
                     android:shadowRadius="@integer/material_motion_duration_long_1"
-                    android:text="Search"
+                    android:text="@string/search"
                     android:radius="11dp"
+                    android:backgroundTint="@color/babyblue"
                     android:textAllCaps="false" />
 
             </LinearLayout>
