doing some experiment to fix the null pointer exception at mapsactivity, add close brace on the json set text.

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -34,7 +34,7 @@
 
 
                 <Button
-                    android:id="@+id/btn_search"
+                    android:id="@+id/siteBtn"
                     android:layout_width="0dp"
                     android:layout_height="35dp"
                     android:layout_marginTop="10dp"
@@ -56,8 +56,8 @@
     </ScrollView>
 
 
-    <fragment
-        android:id="@+id/mapfragment"
+    <com.huawei.hms.maps.MapView
+        android:id="@+id/mapView"
         class="com.huawei.hms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
