--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -20,8 +20,9 @@
 
             <ImageButton
                 android:id="@+id/privacyPolicy"
-                android:layout_width="130dp"
-                android:layout_height="50dp"
+                android:layout_width="200dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_height="70dp"
                 android:scaleType="fitXY"
                 app:srcCompat="@drawable/rectanglelogo" />
 
@@ -46,7 +47,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="6"
                     android:gravity="center"
-                    android:text="Hari ini Kamis, 7 Juli 2021"
+                    android:textSize="18sp"
+                    android:text="Kamis, 7 Juli 2021"
                     android:textColor="@color/lighrgrey" />
 
                 <View
@@ -97,13 +99,12 @@
 
 
                 <LinearLayout
-                    android:id="@+id/red_rect_shape"
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginRight="5dp"
                     android:layout_weight="6"
-                    android:background="@drawable/round_rect_shape"
+                    android:background="@drawable/round_rect_shape_red"
                     android:orientation="vertical"
                     android:padding="25dp">
 
@@ -115,6 +116,7 @@
                         android:textColor="@color/white"
                         android:textSize="30sp"
                         android:textStyle="bold"
+                        android:layout_marginTop="10dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.498"
@@ -131,13 +133,12 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/yellow_rect_shape"
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="5dp"
                     android:layout_weight="6"
-                    android:background="@drawable/round_rect_shape"
+                    android:background="@drawable/round_rect_shape_yellow"
                     android:orientation="vertical"
                     android:padding="25dp">
 
@@ -149,6 +150,7 @@
                         android:textColor="@color/white"
                         android:textSize="30sp"
                         android:textStyle="bold"
+                        android:layout_marginTop="10dp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.498"
@@ -168,6 +170,62 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:layout_marginVertical="5dp"
+                android:background="@drawable/round_rect_shape_green"
+                android:orientation="vertical"
+                android:padding="25dp">
+
+                <TextView
+                    android:id="@+id/DataHarianCovid_jmlsembuh"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="35sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.498"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.335" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sembuhDesc"
+                    android:textColor="@color/white" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:orientation="horizontal">
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/rs"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <Button
+                    android:id="@+id/maps"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/round_rect_shape"
+                    android:backgroundTint="@color/babyblue"
+                    android:text="@string/maps"
+                    android:textColor="@color/white" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="5dp"
                 android:orientation="horizontal"
@@ -175,13 +233,12 @@
 
 
                 <LinearLayout
-                    android:id="@+id/red_rect_shape2"
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginRight="5dp"
                     android:layout_weight="6"
-                    android:background="@drawable/round_rect_shape"
+                    android:background="@drawable/round_rect_shape_red"
                     android:gravity="center_horizontal"
                     android:orientation="vertical"
                     android:padding="25dp">
@@ -212,13 +269,12 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:id="@+id/yellow_rect_shape2"
                     android:layout_width="match_parent"
                     android:layout_height="120dp"
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="5dp"
                     android:layout_weight="6"
-                    android:background="@drawable/round_rect_shape"
+                    android:background="@drawable/round_rect_shape_yellow"
                     android:gravity="center_horizontal"
                     android:orientation="vertical"
                     android:padding="25dp">
@@ -248,63 +304,6 @@
 
 
                 </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:orientation="horizontal">
-
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/rs"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
-
-                <Button
-                    android:id="@+id/maps"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/round_rect_shape"
-                    android:backgroundTint="@color/babyblue"
-                    android:text="@string/maps"
-                    android:textColor="@color/white" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/green_rect_shape"
-                android:layout_width="match_parent"
-                android:layout_height="120dp"
-                android:layout_marginVertical="5dp"
-                android:background="@drawable/round_rect_shape"
-                android:orientation="vertical"
-                android:padding="25dp">
-
-                <TextView
-                    android:id="@+id/DataHarianCovid_jmlsembuh"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:textSize="35sp"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.498"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.335" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/sembuhDesc"
-                    android:textColor="@color/white" />
-
             </LinearLayout>
 
         </LinearLayout>
