--- a/app/src/main/res/layout/privacy_policy.xml
+++ b/app/src/main/res/layout/privacy_policy.xml
@@ -18,7 +18,16 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
             android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="260dp"
+                android:layout_height="41dp"
+                android:layout_margin="15dp"
+                android:contentDescription="@string/imageDesc"
+                app:srcCompat="@drawable/rectanglelogo" />
 
             <TextView
                 android:id="@+id/Content"
@@ -33,16 +42,5 @@
                 android:autoLink="web"/>
         </LinearLayout>
     </ScrollView>
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="260dp"
-        android:layout_height="41dp"
-
-        android:contentDescription="@string/imageDesc"
-        app:srcCompat="@drawable/rectanglelogo"
-        tools:layout_editor_absoluteX="61dp"
-        tools:layout_editor_absoluteY="610dp"
-        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
