--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal"
     android:layout_marginHorizontal="10dp"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/drawer_layout">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -308,6 +310,13 @@
         </LinearLayout>
     </ScrollView>
 
+    <com.google.android.material.navigation.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/nav_view"
+        android:layout_gravity="start"
+        app:menu="@menu/activity_main_drawer" />
+
 
     <!--    <TextView-->
 <!--        android:id="@+id/MainTitle"-->
@@ -373,4 +382,4 @@
 <!--        app:layout_constraintStart_toStartOf="parent"-->
 <!--        app:layout_constraintTop_toBottomOf="@+id/maps"-->
 <!--        app:layout_constraintVertical_bias="0.147" />-->
-</LinearLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
